# tijdcapsule

./: LICENSE  PRIVACY.md  README.md  TODO.md  build.sh  deploy.sh  install.sh  nixpacks.toml  start.sh
.github/workflows/: rust.yml  shuttle.yml  ts.yml
client/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts
client/src/: App.svelte  app.css  app.scss  client.ts  main.ts  scrollbar.scss
client/src/lib/: CapsuleSettings.svelte  Editor.svelte  Footer.svelte  Markdown.svelte  Nav.svelte  ShovelIcon.svelte  carta.ts
client/src/lib/styles/: editor.scss  markdown.scss  slider.scss
client/src/lib/waiting/: Waiting.svelte
client/src/lib/waiting/modes/: Countdown.svelte  Fakebar.svelte  Hourglass.svelte
client/src/routes/: Capsule.svelte  Home.svelte
server/: .gitignore  Cargo.toml  Shuttle.toml
server/.sqlx/: query-02d25142db2afeb0d33b62d3f5a0237b55875af27150f22875afdd2ff3644874.json  query-1d21afa916cfefb11bfec4236b598fbe9e61135cd5e64f9ef7be831d66db6543.json  query-3a3fd0b15ad90c0b2144eea70da1156d6c0734a195870dbb503aa2dc51329096.json  query-5c1dd97bad7584cf0b7bd969c1de2c053f3ff7e40bedc4437451580421907314.json  query-623ad86137f22c4f0e00c382aec13d1739881ee7ad6c16bfa8895e0d08eeac23.json
server/migrations/: 01_capsule.sql
server/src/: log.rs  main.rs  routers.rs
server/src/persist/: capsule.rs  mod.rs  user.rs
server/src/routers/: app.rs  capsule.rs  mod.rs  root.rs
server/src/services/: capsule.rs  mod.rs  user.rs
server/src/utils/: cipher.rs  idgen.rs  log.rs  mod.rs  state.rs
