[package]
name = "tijdcapsule-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-client-ip = "0.6.0"
base62 = "2.0.2"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "macros", "tls-rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
